Prevent booking overflow in JavaScript rather than CSS

--- a/src/components/Rooms.css
+++ b/src/components/Rooms.css
@@ -72,7 +72,6 @@ div.sorting {
   background-color: #f1f1f1;
   margin: 0 -1px;
   position: relative;
-  overflow: hidden;
 }
 
 .booking,
